--- a/tutorial/data-binding.html
+++ b/tutorial/data-binding.html
@@ -7,8 +7,19 @@
 </head>
 <body>
   <div id="app">
-    <p>{{ num }}</p>
+    <p v-bind:id="uuid" v-bind:class="name">{{ num }}</p>
     <p>{{ doubleNum }}</p>
+    <div v-if="loading">
+      Loading...
+    </div>
+    <div v-else>
+      test user has benn logged in
+    </div>
+    <div v-show="loading">
+      Loading...
+    </div>
+    <input type="text" v-model="message">
+    <p>message is : {{ message }}</p>
   </div>
   
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -16,7 +27,11 @@
   new Vue({
     el: '#app',
     data: {
-      num: 10
+      num: 10,
+      uuid: 'abc1234',
+      name: 'text-blue',
+      loading: true,
+      message: ''
     },
     // 데이터의 값에 따라서 바뀌는 값을 정의
     computed: {
